--- a/Game.Of.life/index.html
+++ b/Game.Of.life/index.html
@@ -6,12 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.7.0/lib/p5.js"></script>
+    <script src="LivingCreature.js"></script>
     <script src="grass.js"></script>
     <script src="grassEater.js"></script>
     <script src="predator.js"></script>
     <script src="dragon.js"></script>
     <script src="eater.js"></script>
     <script src="script.js"></script>
+
 </head>
 <body>
     
