add more buttons

--- a/Game.Of.life/index.html
+++ b/Game.Of.life/index.html
@@ -11,6 +11,12 @@
 
 </head>
 <body>
-    <button class="grass" onclick="AddGrass()">Add Grass</button>
+    <button class="grass" onclick="AddGrass()" style="background-color: green">Add Grass</button>
+    <button class="grassEater" onclick="AddGrassEater()" style="background-color: white">Add GrassEater</button>
+    <button class="predator" onclick="AddPredator()" style="background-color: magenta">Add Predator</button>
+    <button class="dragon" onclick="AddDragon()" style="background-color: orange">Add Dragon</button>
+    <button class="eater" onclick="AddEater()" style="background-color: red">Add Eater</button>
+
+    
 </body>
 </html>
