--- a/Game.Of.life/index.html
+++ b/Game.Of.life/index.html
@@ -17,10 +17,10 @@
     <button class="dragon" onclick="AddDragon()" style="background-color: orange">Add Dragon</button>
     <button class="eater" onclick="AddEater()" style="background-color: red">Add Eater</button>
     
-    <button class="Spring()" onclick="Spring" style="background-color: darkgreen">Spring</button>
-    <button class="Summer()" onclick="Summer"style="background-color: #79a83b">Summer</button>
-    <button class="Autumn()" onclick="Autumn"style="background-color: #ff8453">Autumn</button>
-    <button class="Winter()" onclick="Winter"style="background-color: #50a4d4">Winter</button>
+    <button class="Spring()" onclick="Spring()" style="background-color: darkgreen">Spring</button>
+    <button class="Summer()" onclick="Summer()"style="background-color: #79a83b">Summer</button>
+    <button class="Autumn()" onclick="Autumn()"style="background-color: #ff8453">Autumn</button>
+    <button class="" onclick="Winter()"style="background-color: #50a4d4">Winter</button>
 
     
 </body>
